# ComfyUI-AppleSilicon-FP8

./: .gitignore  README.md  __init__.py  prestartup_script.py  pyproject.toml  requirements.txt
_patches/: __init__.py  _common.py  comfykitchen_fp8.py  flash_attn_mtl.py  ops_bias_fp8.py  psutil_vmstat.py  rmsnorm_mps_large.py  scaled_mm_fp8.py  sdpa_flash_mps.py  stochastic_round_fp8.py  tensor_to_fp8.py  wan_blockswap_mps.py
